some overlaping bugs fixed

--- a/animestyle.css
+++ b/animestyle.css
@@ -176,12 +176,13 @@ body {
 }
 
 #etc2 {
-    width: 70%;
+    width: max(600px,70%);
     
     margin-left: auto;
     margin-right: auto;
-    margin-top: auto;
+    margin-top: 50px;
     margin-bottom: auto;
+    padding: 15px;
 }
 
 #syno {
@@ -189,6 +190,7 @@ body {
     margin-right: auto;
     text-shadow: 0px 0px 5px #000000;
     min-height: 25%;
+    width: 20vw;
 }
 
 .iconcara {
